css/portfolio.css
:root {
    --bg: #f0f0f0; 
    --primary: #0f172a;
    --secondary: #475569;
    --accent: #2563eb;
    --border: #dcdcdc;
    --card: #ffffff;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: 'Inter', sans-serif;
    background: var(--bg);
    color: var(--primary);
    line-height: 1.6;
}

/* Container */
.container {
    width: 90%;
    max-width: 1000px;
    margin: auto;
}

/* NAVBAR */
nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    background: #ffffff;
    border-bottom: 1px solid var(--border);
    z-index: 1000;
}

.nav-content {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 0;
}

.logo a {
    font-weight: 700;
    font-size: 1.5rem;
    text-decoration: none;
    color: var(--primary);
}

nav ul {
    list-style: none;
    display: flex;
    gap: 2rem;
}

nav a {
    text-decoration: none;
    color: var(--secondary);
    font-size: 0.95rem;
    transition: color 0.3s ease;
}

nav a:hover {
    color: var(--accent);
}

/* SECTIONS */
section {
    padding: 80px 0;
}

/* HERO */
.hero {
    min-height: 100vh;
    display: flex;
    align-items: center;
    border-bottom: 1.54px solid var(--border);
}

.hero p.intro {
    font-weight: 600;
    margin-bottom: 0.5rem;
}

h1 {
    font-size: 2.8rem;
    margin-bottom: 1rem;
}

h2 {
    font-size: 2rem;
    color: var(--secondary);
}

h3 {
    font-size: 1.5rem;
    margin-bottom: 1rem;
}

p {
    color: var(--secondary);
    max-width: 100%;
}

/* Buttons */
.sec-btn {
    display: flex;
    gap: 1rem;
    margin-top: 2rem;
}

.sec-btn a {
    text-decoration: none;
    border: 1px solid var(--accent);
    padding: 0.6rem 1.2rem;
    border-radius: 8px;
    color: var(--accent);
    font-weight: 500;
    transition: all 0.3s ease;
}

.sec-btn a:hover {
    background: var(--accent);
    color: white;
    cursor: pointer;
}

/* Highlight name */
.highlight {
    color: var(--accent);
    font-weight: 700;
}

/* About */
.about-content {
    display: flex;
    flex-wrap: wrap;
    gap: 3rem;
}
.about-text {
    flex: 1;
}

.skills {
    margin-top: 1.5rem;
}

.skills-grid {
    margin-top: 2rem;

    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
    gap: 1.5rem;
}

.card {
    background: var(--card);
    padding: 1.5rem;
    border-radius: 12px;
    border: 1px solid var(--border);
    transition: 0.3s; 
}
.card:hover {
    transform: translateY(-6px);
}
/* Experience & Projects */
.grid {
    display: grid;
    gap: 1.5rem;
}

.tech {
    color: #0EA5E9;
    font-weight: 500;
}

